src/objects/SWW_Country__c.object
<CustomObject>
    <description>Custom Object used to store country specific data used to support the SellWhatWhere tool.</description>
    <fields>
        <fullName>Country_Notes__c</fullName>
        <label>Country Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Country_Website__c</fullName>
        <label>Country Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>DemoEvalConv_ImportRecord__c</fullName>
        <label>Demo/Eval Conv Importer of Record</label>
        <picklist>
            <picklistValues>
                <fullName>Nimble Inc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nimble Storage Inc (via AMS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nimble SE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reseller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Toshiba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DemoEvalConv_SetupStatus__c</fullName>
        <label>Demo/Eval Conv Set Up Status</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DemoEvalConv_ShipTerms__c</fullName>
        <label>Demo/Eval Conv Shipping Terms</label>
        <picklist>
            <picklistValues>
                <fullName>DAP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DDP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DDP via Carnet ($500)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DDP VAT Deferred</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FCA Origin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DemoEvalConv_TitleTransfer__c</fullName>
        <label>Demo/Eval Conv Title Transfer</label>
        <picklist>
            <picklistValues>
                <fullName>At Customer Site</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shipping Point - Calif</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upon Sale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DemoEvalConv_VATGST__c</fullName>
        <label>Demo/Eval Conv VAT/GST Process</label>
        <picklist>
            <picklistValues>
                <fullName>Depot Not Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GST-free - letter filed with AU gov&apos;t</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GST-free - letter t/b filed with Sing gov&apos;t</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nimble Pays</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nimble Pays GST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nimble Pays GST - Bill Back GST on Customer Invoice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nimble Pays GST/PST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nimble Pays GST/PST and Charges Back to Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nimble Pays Transaction Fee to Flash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nimble Bills GST on Invoice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable for 6 months - Unit Must Convert or Return Within 6 Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable for 12 Months - Unit Must Convert or Return Within 12 Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reseller Pays GST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reseller Pays VAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reseller Pays All ImportTaxes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reseller pays VAT ~10% based on NFR rate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reseller pays VAT ~5% and Duties ~5% based on NFR rate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Cost center would be required to pick up all duties and taxes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DemoEval_ImportRecord__c</fullName>
        <label>Demo/Eval Importer of Record</label>
        <picklist>
            <picklistValues>
                <fullName>Nimble Inc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nimble Storage Inc (via AMS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nimble SE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reseller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Toshiba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DemoEval_SetupStatus__c</fullName>
        <label>Demo/Eval Set Up Status</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DemoEval_ShipTerms__c</fullName>
        <label>Demo/Eval Shipping Terms</label>
        <picklist>
            <picklistValues>
                <fullName>DAP at NFR rate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DDP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DDP via Carnet ($500)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DDP VAT Deferred</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FCA Origin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DemoEval_TitleTransfer__c</fullName>
        <label>Demo/Eval Title Transfer</label>
        <picklist>
            <picklistValues>
                <fullName>At Customer Site</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shipping Point - Calif</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upon Sale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DemoEval_VATGST__c</fullName>
        <label>Demo/Eval VAT/GST Process</label>
        <picklist>
            <picklistValues>
                <fullName>Depot Not Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GST-free - letter filed with AU gov&apos;t</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GST-free - letter t/b filed with Sing gov&apos;t</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nimble Pays</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nimble Pays GST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nimble Pays GST - Bill Back GST on Customer Invoice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nimble Pays GST/PST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nimble Pays GST/PST and Charges Back to Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nimble Pays Transaction Fee to Flash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nimble Bills GST on Invoice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable for 6 months - Unit Must Convert or Return Within 6 Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable for 12 Months - Unit Must Convert or Return Within 12 Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reseller Pays GST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reseller Pays VAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reseller Pays All ImportTaxes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reseller pays VAT ~10% based on NFR rate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reseller pays VAT ~5% and Duties ~5% based on NFR rate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Cost center would be required to pick up all duties and taxes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>EMEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Americas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Latin America</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RevShip_ImportRecord__c</fullName>
        <label>Revenue Shipment Importer of Record</label>
        <picklist>
            <picklistValues>
                <fullName>Nimble Storage Inc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nimble Storage Inc (via AMS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nimble SE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reseller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Toshiba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RevShip_SetupStatus__c</fullName>
        <label>Revenue Shipment Set Up Status</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RevShip_ShipTerms__c</fullName>
        <label>Revenue Shipment Shipping Terms</label>
        <picklist>
            <picklistValues>
                <fullName>DAP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DDP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DDP via Carnet ($500)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DDP VAT Deferred</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FCA Origin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CIP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RevShip_TitleTransfer__c</fullName>
        <label>Revenue Shipment Title Transfer</label>
        <picklist>
            <picklistValues>
                <fullName>At Customer Site</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shipping Point - Calif</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upon Sale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RevShip_VATGST__c</fullName>
        <label>Revenue Shipment VAT/GST Process</label>
        <picklist>
            <picklistValues>
                <fullName>Depot Not Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GST-free - letter filed with AU gov&apos;t</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GST-free - letter t/b filed with Sing gov&apos;t</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nimble Pays</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nimble Pays GST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nimble Pays GST - Bill Back GST on Customer Invoice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nimble Pays GST/PST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nimble Pays GST/PST and Charges Back to Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nimble Pays Transaction Fee to Flash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nimble Bills GST on Invoice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable for 6 months - Unit Must Convert or Return Within 6 Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable for 12 Months - Unit Must Convert or Return Within 12 Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reseller Pays GST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reseller Pays VAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reseller Pays All ImportTaxes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reseller pays VAT ~10% based on NFR rate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reseller pays VAT ~5% and Duties ~5% based on NFR rate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Cost center would be required to pick up all duties and taxes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sandbox_Reference_Id__c</fullName>
        <externalId>true</externalId>
        <label>Sandbox Reference Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Terms__c</fullName>
        <label>Shipping Terms</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>SvcPart_SetupStatus__c</fullName>
        <label>Service Parts Set Up Status</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SvcPart_ShipTerms__c</fullName>
        <label>Service Parts Shipping Terms</label>
        <picklist>
            <picklistValues>
                <fullName>DAP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DDP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DDP via Carnet ($500)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DDP VAT Deferred</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FCA Origin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SvcPart_TitleTransfer__c</fullName>
        <label>Service Parts Title Transfer</label>
        <picklist>
            <picklistValues>
                <fullName>At Customer Site</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shipping Point - Calif</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upon Sale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SvcPart_VATGST__c</fullName>
        <label>Service Parts VAT/GST Process</label>
        <picklist>
            <picklistValues>
                <fullName>Depot Not Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GST-free - letter filed with AU gov&apos;t</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GST-free - letter t/b filed with Sing gov&apos;t</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nimble Pays</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nimble Pays GST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nimble Pays GST - Bill Back GST on Customer Invoice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nimble Pays GST/PST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nimble Pays GST/PST and Charges Back to Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nimble Pays Transaction Fee to Flash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nimble Bills GST on Invoice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable for 6 months - Unit Must Convert or Return Within 6 Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable for 12 Months - Unit Must Convert or Return Within 12 Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reseller Pays GST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reseller Pays VAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reseller Pays All ImportTaxes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reseller pays VAT ~10% based on NFR rate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reseller pays VAT ~5% and Duties ~5% based on NFR rate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Cost center would be required to pick up all duties and taxes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SvcParts_ImportRecord__c</fullName>
        <label>Service Parts Importer of Record</label>
        <picklist>
            <picklistValues>
                <fullName>Nimble Inc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nimble Storage Inc (via AMS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nimble SE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reseller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Toshiba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Trunk_ImportRecord__c</fullName>
        <label>Trunk Units Importer of Record</label>
        <picklist>
            <picklistValues>
                <fullName>Nimble Storage Inc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nimble Storage Inc (via AMS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nimble SE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reseller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Toshiba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Trunk_SetupStatus__c</fullName>
        <label>Trunk Units  Set Up Status</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Trunk_ShipTerms__c</fullName>
        <label>Trunk Units Shipping Terms</label>
        <picklist>
            <picklistValues>
                <fullName>DAP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DDP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DDP via Carnet ($500)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DDP VAT Deferred</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FCA Origin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Trunk_TitleTransfer__c</fullName>
        <label>Trunk Units Title Transfer</label>
        <picklist>
            <picklistValues>
                <fullName>At Customer Site</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shipping Point - Calif</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upon Sale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Trunk_VATGST__c</fullName>
        <label>Trunk Units VAT/GST Process</label>
        <picklist>
            <picklistValues>
                <fullName>Depot Not Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GST-free - letter filed with AU gov&apos;t</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GST-free - letter t/b filed with Sing gov&apos;t</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nimble Pays</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nimble Pays GST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nimble Pays GST - Bill Back GST on Customer Invoice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nimble Pays GST/PST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nimble Pays GST/PST and Charges Back to Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nimble Pays Transaction Fee to Flash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nimble Bills GST on Invoice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable for 6 months - Unit Must Convert or Return Within 6 Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable for 12 Months - Unit Must Convert or Return Within 12 Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reseller Pays GST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reseller Pays VAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reseller Pays All ImportTaxes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reseller pays VAT ~10% based on NFR rate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reseller pays VAT ~5% and Duties ~5% based on NFR rate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Cost center would be required to pick up all duties and taxes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>SellWhatWhere Country</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Region__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Country Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SellWhatWhere Countries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>